oriterm_core/tests/vttest/snapshots/vttest__menu4__80x24_04_dblsize_02.snap
---
source: oriterm_core/tests/vttest/menu4.rs
expression: text
---
 80 column mode                                                                 
                                                                                
                                                                                
                                                                                
  v------- left margin                                                          
                                                                                
  This is a normal-sized line                                                   
                                                                                
 This is a Double-width line                                                    
                                                                                
 This is a Double-width-and-height line                                         
 This is a Double-width-and-height line                                         
                                                                                
 This is another such line                                                      
 This is another such line                                                      
                                                                                
  ^------- left margin                                                          
                                                                                
                                                                                
                                                                                
This **is** a double-width line                                                 
                                                                                
Push <RETURN>
